--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -12,22 +12,60 @@ on:
         required: false
         default: 'https://github.com/volcengine/volc-sdk-python.git'
         type: string
+  schedule:
+    # 每天凌晨2点运行
+    - cron: '0 2 * * *'
 
 jobs:
+  check-new-version:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'schedule'
+    outputs:
+      has_new_version: ${{ steps.check.outputs.has_new_version }}
+      latest_version: ${{ steps.check.outputs.latest_version }}
+      latest_commit: ${{ steps.check.outputs.latest_commit }}
+    
+    steps:
+    - name: 检查最新版本
+      id: check
+      run: |
+        # 获取最新的tag
+        latest_tag=$(git ls-remote --tags https://github.com/volcengine/volc-sdk-python.git | grep -v '{}' | tail -1 | sed 's/.*refs\/tags\///')
+        echo "最新版本: $latest_tag"
+        
+        # 获取最新commit
+        latest_commit=$(git ls-remote https://github.com/volcengine/volc-sdk-python.git HEAD | cut -f1)
+        echo "最新commit: $latest_commit"
+        
+        # 检查是否已经发布过这个版本
+        if gh release view "$latest_tag" --repo ${{ github.repository }} 2>/dev/null; then
+          echo "版本 $latest_tag 已经发布过，跳过构建"
+          echo "has_new_version=false" >> $GITHUB_OUTPUT
+        else
+          echo "发现新版本 $latest_tag，准备构建"
+          echo "has_new_version=true" >> $GITHUB_OUTPUT
+        fi
+        
+        echo "latest_version=$latest_tag" >> $GITHUB_OUTPUT
+        echo "latest_commit=$latest_commit" >> $GITHUB_OUTPUT
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build-wheels:
     runs-on: windows-latest
-    strategy:
-      matrix:
-        python-version: ['3.7', '3.9', '3.10', '3.11', '3.12']
+    needs: [check-new-version]
+    if: |
+      github.event_name == 'workflow_dispatch' || 
+      (github.event_name == 'schedule' && needs.check-new-version.outputs.has_new_version == 'true')
     
     steps:
     - name: 检出代码
       uses: actions/checkout@v4
       
-    - name: 设置Python ${{ matrix.python-version }}
+    - name: 设置Python
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.9'
         
     - name: 安装构建依赖
       run: |
@@ -36,9 +74,13 @@ jobs:
         
     - name: 克隆火山引擎SDK源码
       run: |
-        git clone ${{ github.event.inputs.source_repo }} volc-sdk-source
+        git clone https://github.com/volcengine/volc-sdk-python.git volc-sdk-source
         cd volc-sdk-source
-        git checkout ${{ github.event.inputs.version }}
+        if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+          git checkout ${{ github.event.inputs.version }}
+        else
+          git checkout ${{ needs.check-new-version.outputs.latest_version }}
+        fi
         
     - name: 构建wheel包
       run: |
@@ -48,66 +90,43 @@ jobs:
     - name: 上传构建产物
       uses: actions/upload-artifact@v4
       with:
-        name: wheel-python-${{ matrix.python-version }}
+        name: wheel-package
         path: volc-sdk-source/dist/*.whl
         
   create-release:
-    needs: build-wheels
+    needs: [check-new-version, build-wheels]
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch'
+    if: |
+      (github.event_name == 'workflow_dispatch') || 
+      (github.event_name == 'schedule' && needs.check-new-version.outputs.has_new_version == 'true')
     
     steps:
-    - name: 下载所有构建产物
+    - name: 下载构建产物
       uses: actions/download-artifact@v4
       with:
+        name: wheel-package
         path: wheels
         
     - name: 整理文件
       run: |
         mkdir -p release-files
-        # 为每个wheel文件添加Python版本标识
-        for wheel_file in $(find wheels -name "*.whl"); do
-          # 从路径中提取Python版本
-          python_version=$(echo "$wheel_file" | grep -o 'python-[0-9.]*' | sed 's/python-//')
-          # 获取原始文件名（不含路径）
-          filename=$(basename "$wheel_file")
-          # 在文件名中插入Python版本信息
-          # 将版本号中的点号去掉，例如 3.10 -> 310
-          python_tag=$(echo "$python_version" | sed 's/\.//g')
-          new_filename=$(echo "$filename" | sed "s/-py3-none-any/-py${python_tag}-none-win_amd64/")
-          cp "$wheel_file" "release-files/$new_filename"
-        done
+        # 复制所有wheel文件到release目录
+        cp wheels/*.whl release-files/
         echo "=== 整理后的文件 ==="
         ls -la release-files/
-        
-    - name: 列出下载的文件
-      run: |
-        echo "=== 文件结构 ==="
-        find wheels -type f -name "*.whl" | head -20
-        echo "=== 目录结构 ==="
-        ls -la wheels/
-        echo "=== 子目录内容 ==="
-        for dir in wheels/*/; do
-          echo "--- $dir ---"
-          ls -la "$dir" 2>/dev/null || echo "目录不存在"
-        done
         
     - name: 创建Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ github.event.inputs.version }}
-        name: Release ${{ github.event.inputs.version }}
+        tag_name: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.version || needs.check-new-version.outputs.latest_version }}
+        name: Release ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.version || needs.check-new-version.outputs.latest_version }}
         body: |
-          ## 火山引擎SDK ${{ github.event.inputs.version }}
+          ## 火山引擎SDK ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.version || needs.check-new-version.outputs.latest_version }}
           
-          包含以下Python版本的wheel包：
-          - Python 3.7 (volcengine-${{ github.event.inputs.version }}-py37-none-win_amd64.whl)
-          - Python 3.9 (volcengine-${{ github.event.inputs.version }}-py39-none-win_amd64.whl)
-          - Python 3.10 (volcengine-${{ github.event.inputs.version }}-py310-none-win_amd64.whl)
-          - Python 3.11 (volcengine-${{ github.event.inputs.version }}-py311-none-win_amd64.whl)
-          - Python 3.12 (volcengine-${{ github.event.inputs.version }}-py312-none-win_amd64.whl)
+          包含通用的wheel包，支持所有Python版本。
           
-          构建时间: ${{ github.event.head_commit.timestamp }}
+          构建时间: ${{ github.event.head_commit.timestamp || github.event.schedule }}
+          ${{ github.event_name == 'schedule' && format('自动构建 - 触发时间: {0}', github.event.schedule) || '' }}
         files: release-files/*.whl
         generate_release_notes: false
         draft: false
